# opt-parser

./: .gitignore  .travis.yml  LICENSE  library.json  readme.md
src/: optparser.cpp  optparser.h  optparser.hpp
tests/: CMakeLists.txt  main.cpp
tests/catch2/: catch.hpp
tests/src/: test_optparser.hpp
tmp/: Astyle.sh
